tests/baselines/reference/iterableArrayPattern17(strict=true).errors.txt
iterableArrayPattern17.ts(1,13): error TS7008: Member 'x' implicitly has an 'any' type.
iterableArrayPattern17.ts(2,25): error TS7008: Member 'y' implicitly has an 'any' type.
iterableArrayPattern17.ts(17,5): error TS2345: Argument of type 'FooIterator' is not assignable to parameter of type 'Bar'.
  Property 'x' is missing in type 'FooIterator' but required in type 'Bar'.


==== iterableArrayPattern17.ts (3 errors) ====
    class Bar { x }
                ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    class Foo extends Bar { y }
                            ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    function fun(...[a, b]: Bar[]) { }
    fun(new FooIterator);
        ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'FooIterator' is not assignable to parameter of type 'Bar'.
!!! error TS2345:   Property 'x' is missing in type 'FooIterator' but required in type 'Bar'.
!!! related TS2728 iterableArrayPattern17.ts:1:13: 'x' is declared here.